--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,9 @@
       <!-- bower:css -->
       <!-- endbower -->
     <!-- endbuild -->
+     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300' rel='stylesheet' type='text/css'>
+     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+     <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
@@ -22,6 +25,7 @@
       <link rel="stylesheet" href="app/home/home.scss">
       <link rel="stylesheet" href="components/buttons/buttons.scss">
       <!-- endinjector -->
+
     <!-- endbuild -->
   </head>
   <body ng-app="blocitoffApp">
