--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -1,22 +1,52 @@
 <section id="home-container">  
   <div class="container col-md-8">
     <h1 class="main-title">BlocItOff</h1>
-    <form class="form-horizontal" role="form">
-      <div class="form-group">
-        <label class="sr-only">Task</label>
-        <input type="text" placeholder="new task" ng-model="curTask">
-        <button type="submit" class="btn btn-primary" ng-click="addTask($event)">Add Task</button>
-      </div>
-    </form>
-    <h3 class="sub-title">Task List</h3>
-    <table class="table table-striped">
-      <th class-"col-md-1">#</th>
-      <th>Task</th>
-      <tr ng-repeat="task in taskList">
-        <td>{{ $index + 1 }}</td>
-        <td>{{ task }}</td>
-      </tr>
-    </table>
+        <form class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="sr-only">Task</label>
+            <input type="text-area" placeholder="new task" ng-model="description">
+            <button type="submit" class="btn btn-success" ng-click="addTask()">Add Open Task</button>
+          </div>
+        </form>
+    <tabset>
+      <tab class="task-tab" heading="Open Tasks">
+
+        <h4 id="open-hdr">Open Task List</h3>
+        <table class="table table-striped">
+          <tr>
+            <th class="done-col">Complete</th>
+            <th class="task-number-col">#</th>
+            <th>Task</th>
+          </tr>
+          <tr ng-repeat="task in taskList | filter:{ name: 'open' }">
+            <td><span class="mark-it"><i class="fa fa-square-o" ng-click="removeTask($index)"></i>
+                <i class="fa fa-check-square-o" ng-click="toggleOpenClosed($index)"></i></span>
+            </td>
+            <td>{{ $index + 1 }}</td>
+            <td>{{ task.description }}</td> 
+          </tr>
+        </table>
+      </tab>
+      <tab class="task-tab" heading="Completed Tasks">
+        <h4 id="closed-hdr">All Tasks</h3>
+        <table class="table table-striped">
+          <tr>
+            <th class="done-col">Re-Open</th>
+            <th class="task-number-col">#</th>
+            <th>Task</th>
+            <th>Status</th>
+          </tr>
+          <tr ng-repeat="task in taskList | filter:{ name: closed }">
+            <td><span class="mark-it"><i class="fa fa-square-o" ng-click="removeTask($index)"></i>
+                <i class="fa fa-check-square-o" ng-click="toggleOpenClosed($index)"></i></span>
+            </td>
+            <td>{{ $index + 1 }}</td>
+            <td>{{ task.description }}</td> 
+            <td>{{ task.name }}</td>
+          </tr>
+        </table>
+      </tab>
+
   </div>
 
 </section>
