--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -18,6 +18,7 @@
             <th class="done-col">Complete</th>
             <th class="task-number-col">#</th>
             <th>Task</th>
+            <th>Expires In</th>
           </tr>
           <tr ng-repeat="task in taskList | filter:{ name: 'open' }">
           	<td><span class="delete-it"><i class="fa fa-times-circle-o" ng-click="removeTask(task)"></i>
@@ -28,6 +29,7 @@
             </td>
             <td>{{ $index + 1 }}</td>
             <td>{{ task.description }}</td> 
+            <td>{{ timeRemaining(task) | timecode }}</td> 
           </tr>
         </table>
       </tab>
@@ -56,5 +58,6 @@
       </tab>
 
   </div>
-
 </section>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
