--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -19,6 +19,7 @@
             <th class="task-number-col">#</th>
             <th>Task</th>
             <th>Expires In</th>
+            <th>Expiration Window</th>
           </tr>
           <tr ng-repeat="task in taskList | filter:{ name: 'open' }">
           	<td><span class="delete-it"><i class="fa fa-times-circle-o" ng-click="removeTask(task)"></i>
@@ -30,6 +31,7 @@
             <td>{{ $index + 1 }}</td>
             <td>{{ task.description }}</td> 
             <td>{{ timeRemaining(task) | timecode }}</td> 
+            <td>{{ expireTime }} </td>
           </tr>
         </table>
       </tab>
@@ -56,7 +58,14 @@
           </tr>
         </table>
       </tab>
-
+      <tab class="task-tab" heading="Settings">
+          <div class="form-group">
+            <label>Task Expiration Time (in ms)</label>
+            <input type="text" placeholder="task expiration time in ms" ng-model="expireTime">
+            {{ expireTime }}
+          </div>
+        </form>
+      </tab>
   </div>
 </section>
 
